advocate name fix